[project]
name = "python-101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Abdullah", email = "muhammad11abdullah21@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
python-101 = "python_101:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
